New Patches by Galleel

--- a/program.html
+++ b/program.html
@@ -18,10 +18,11 @@
   <div id="menuContainer" class="nav">
     <ul id="menu">
       <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
-	  <li id="about"><a href="about.html"><span>About</span></a></li>
+      <li id="about"><a href="about.html"><span>About</span></a></li>
       <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
       <li id="program"><a href="program.html"><span>Program</span></a></li>
-      <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
+      <li id="speakers"><a href="speakers.html"><span>Speakers</span></a></li>
+      <li id="blog"><a href="badges.html"><span>Banners</span></a></li>
       <li id="twitter"><a href="http://twitter.com/rubyconfindia" target="_blank"><span>Twitter</span></a></li>
       <li class="last" id="contact"><a href="contact.html"><span>Contact</span></a></li>
     </ul>
@@ -92,7 +93,7 @@
           <td valign="middle"><p><span class="lighter">TRACK 1:</span> Concurrency patterns in Ruby - <span class="lighter">Sai Venkatakrishnan &amp; Hari Krishnan</span></p></td>
           <td valign="middle"><p><span class="lighter">TRACK 2:</span> Events, threads and writing robust client/servers in Ruby - <span class="lighter">Hemant Kumar</span></p></td>
         </tr>
-		<tr class="odd">
+        <tr class="odd">
           <td valign="middle"><p align="right">5:00</p></td>
           <td valign="middle"><p align="right">6:00</p></td>
           <td valign="middle"><p><span class="lighter">TRACK 1:</span> Mortal Kombat: Developer vs. Designer - <span class="lighter">Kapil Mohan &amp; Arun J</span></p></td>
@@ -100,9 +101,7 @@
         </tr>
       </tbody>
     </table>
-
-
-	<table>
+    <table>
       <thead>
         <tr>
           <th colspan="4" valign="middle">Day 2 - Mar 21st - Sun</th>
@@ -146,7 +145,7 @@
           <td valign="middle"><p align="right">4:00</p></td>
           <td valign="middle"><p align="right">4:45</p></td>
           <td valign="middle"><p><span class="lighter">TRACK 1:</span> Project Fedena and Why Ruby on Rails - <span class="lighter">Arvind G S</p></td>
-		  <td valign="middle"><p><span class="lighter">TRACK 2:</span> Hacking and learning from Open source Ruby (Open source Rubyisms) - <span class="lighter">Sreekanth Vadagiri</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2:</span> Hacking and learning from Open source Ruby (Open source Rubyisms) - <span class="lighter">Sreekanth Vadagiri</span></p></td>
         </tr>
         <tr>
           <td valign="middle"><p align="right">5:00</p></td>
@@ -155,13 +154,6 @@
         </tr>
       </tbody>
     </table>
-
-
-
-
-
-
-
   </div>
   <div class="sidebar sidebar2">
     <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
@@ -178,7 +170,7 @@
           <div class="sponsor_logos">
             <ul class="co-sponsor">
               <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
-			  <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
+              <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
             </ul>
           </div>
         </li>
@@ -187,6 +179,7 @@
           <div class="sponsor_logos">
             <ul class="co-sponsor">
               <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
+              <li> <a href="http://www.aec.edu.in/" target="_blank"><img src="images/Aditya_logo.png" alt="Aditya Group Of colleges" /></a></li>
             </ul>
           </div>
         </li>
