--- a/about.html
+++ b/about.html
@@ -18,10 +18,11 @@
   <div id="menuContainer" class="nav">
     <ul id="menu">
       <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
-	  <li id="about"><a href="about.html"><span>About</span></a></li>
+      <li id="about"><a href="about.html"><span>About</span></a></li>
       <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
       <li id="program"><a href="program.html"><span>Program</span></a></li>
-      <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
+      <li id="speakers"><a href="speakers.html"><span>Speakers</span></a></li>
+      <li id="blog"><a href="badges.html"><span>Banners</span></a></li>
       <li id="twitter"><a href="http://twitter.com/rubyconfindia" target="_blank"><span>Twitter</span></a></li>
       <li class="last" id="contact"><a href="contact.html"><span>Contact</span></a></li>
     </ul>
@@ -40,19 +41,14 @@
   </div>
   <div class="content">
     <h2>About</h2>
-    <p>The <strong>Ruby Community</strong> in India together with the <strong>Innovation &amp; Technology Trust</strong> is pleased to announce <strong>RubyConf India 2010</strong> on <strong>Mar 20<sup>th</sup></strong> and <strong>21<sup>st</sup></strong> at the Royal Orchid Hotel, Bangalore. Targeted at Ruby practitioners and anyone remotely interested or curious about Ruby, it will offer Ruby enthusiasts an opportunity brainstorm, network and learn about the latest technology changes first-hand.</p>  
-
-	<p>Being the <strong>first ever</strong> RubyConf to be hosted in India, this 2-day event will feature prominent speakers like Yukihiro “<strong>Matz</strong>” Matsumoto (the creator of Ruby himself will deliver a talk via video-conference), <strong>Chad Fowler</strong> author of “The Passionate Programmer” and “My Job went to India”, <strong>Ola Bini</strong> core-committer to JRuby since 2006, <strong>Obie Fernandez</strong> author of “The Rails Way” and <strong>Nick Sieger</strong> of Engine Yard and JRuby fame.</p>  
-
-	<p>Ruby is an OS dynamic language that offers an ideal development environment for <strong>Agile</strong> practitioners. It has one of the most active open source communities worldwide which produces and supports tools and projects like “Ruby on Rails” - a powerful web application development framework that works well on different platforms, and significantly <strong>reduces time-to-market</strong> and <strong>operating costs</strong>.</p>
-
-	<p>A strong supporter of emerging OS technologies that promise to revolutionize the IT landscape, <strong>ThoughtWorks</strong> is the Platinum and Technology Sponsor for this event and is supported by <strong>Ruby Central</strong> – an international non-profit dedicated to the advocacy of the Ruby programming language across the globe.  Ecosystem support includes Gold Sponsors Castle Rock Research <strong>Corporation &amp; Hashrocket</strong>, Silver Sponsor <strong>Mahaswami Software</strong> and Media Partner <strong>Silicon India</strong>. Register today at <a href="http://rubyconfindia.org/">www.rubyconfindia.org</a>!</p>
-	
+    <p>The <strong>Ruby Community</strong> in India together with the <strong>Innovation &amp; Technology Trust</strong> is pleased to announce <strong>RubyConf India 2010</strong> on <strong>Mar 20<sup>th</sup></strong> and <strong>21<sup>st</sup></strong> at the Royal Orchid Hotel, Bangalore. Targeted at Ruby practitioners and anyone remotely interested or curious about Ruby, it will offer Ruby enthusiasts an opportunity brainstorm, network and learn about the latest technology changes first-hand.</p>
+    <p>Being the <strong>first ever</strong> RubyConf to be hosted in India, this 2-day event will feature prominent speakers like Yukihiro “<strong>Matz</strong>” Matsumoto (the creator of Ruby himself will deliver a talk via video-conference), <strong>Chad Fowler</strong> author of “The Passionate Programmer” and “My Job went to India”, <strong>Ola Bini</strong> core-committer to JRuby since 2006, <strong>Obie Fernandez</strong> author of “The Rails Way” and <strong>Nick Sieger</strong> of Engine Yard and JRuby fame.</p>
+    <p>Ruby is an OS dynamic language that offers an ideal development environment for <strong>Agile</strong> practitioners. It has one of the most active open source communities worldwide which produces and supports tools and projects like “Ruby on Rails” - a powerful web application development framework that works well on different platforms, and significantly <strong>reduces time-to-market</strong> and <strong>operating costs</strong>.</p>
+    <p>A strong supporter of emerging OS technologies that promise to revolutionize the IT landscape, <strong>ThoughtWorks</strong> is the Platinum and Technology Sponsor for this event and is supported by <strong>Ruby Central</strong> – an international non-profit dedicated to the advocacy of the Ruby programming language across the globe.  Ecosystem support includes Gold Sponsors Castle Rock Research <strong>Corporation &amp; Hashrocket</strong>, Silver Sponsor <strong>Mahaswami Software</strong> and Media Partner <strong>Silicon India</strong>. Register today at <a href="http://rubyconfindia.org/">www.rubyconfindia.org</a>!</p>
   </div>
   <!-- Side bar -->
   <div class="sidebar">
-   <div class="support">
-	<a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a>	</div>
+    <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
     <div class="sb_content">
       <h4>Platinum &amp; Technology Sponsor</h4>
       <div class="sponsor_logos">
@@ -64,13 +60,14 @@
       <div class="sponsor_logos">
         <ul class="co-sponsor">
           <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
-		  <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
+          <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
         </ul>
       </div>
       <h4>Silver Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="co-sponsor">
           <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
+          <li> <a href="http://www.aec.edu.in/" target="_blank"><img src="images/Aditya_logo.png" alt="Aditya Group Of colleges" /></a></li>
         </ul>
       </div>
       <h4>Media Partner</h4>
@@ -82,8 +79,8 @@
     </div>
   </div>
   <!-- /side bar -->
-  </div>
-  <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
+</div>
+<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 </div>
 <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
