--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,11 @@
   <div id="menuContainer" class="nav">
     <ul id="menu">
       <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
-	  <li id="about"><a href="about.html"><span>About</span></a></li>
+      <li id="about"><a href="about.html"><span>About</span></a></li>
       <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
       <li id="program"><a href="program.html"><span>Program</span></a></li>
-      <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
+      <li id="speakers"><a href="speakers.html"><span>Speakers</span></a></li>
+      <li id="blog"><a href="badges.html"><span>Banners</span></a></li>
       <li id="twitter"><a href="http://twitter.com/rubyconfindia" target="_blank"><span>Twitter</span></a></li>
       <li class="last" id="contact"><a href="contact.html"><span>Contact</span></a></li>
     </ul>
@@ -56,8 +57,7 @@
   </div>
   <!-- Side bar -->
   <div class="sidebar">
-   <div class="support">
-	<a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a>	</div>
+    <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
     <div class="sb_content">
       <h4>Platinum &amp; Technology Sponsor</h4>
       <div class="sponsor_logos">
@@ -69,13 +69,14 @@
       <div class="sponsor_logos">
         <ul class="co-sponsor">
           <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
-		  <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
+          <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
         </ul>
       </div>
       <h4>Silver Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="co-sponsor">
           <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
+          <li> <a href="http://www.aec.edu.in/" target="_blank"><img src="images/Aditya_logo.png" alt="Aditya Group Of colleges" /></a></li>
         </ul>
       </div>
       <h4>Media Partner</h4>
@@ -87,8 +88,8 @@
     </div>
   </div>
   <!-- /side bar -->
-  </div>
-  <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
+</div>
+<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 </div>
 <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
