--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 </head>
 <body>
 <div class="wrapper">
- 
   <div id="menuContainer" class="nav">
     <ul id="menu">
       <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
-	  <li id="about"><a href="about.html"><span>About</span></a></li>
+      <li id="about"><a href="about.html"><span>About</span></a></li>
       <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
       <li id="program"><a href="program.html"><span>Program</span></a></li>
-      <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
+      <li id="speakers"><a href="speakers.html"><span>Speakers</span></a></li>
+      <li id="blog"><a href="badges.html"><span>Banners</span></a></li>
       <li id="twitter"><a href="http://twitter.com/rubyconfindia" target="_blank"><span>Twitter</span></a></li>
       <li class="last" id="contact"><a href="contact.html"><span>Contact</span></a></li>
     </ul>
@@ -56,20 +56,19 @@
       <div>20th &amp; 21st March</div>
     </div>
     <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
-     
   </div>
   <div class="main_wrap">
     <div class="main_content">
-	  	<div class="col">
-	        <h4>Latest News</h4>
-	        <ul class="news">
-				<li>RubyConf India 2010 sold out within the first week of opening registrations! Added 150 new seats in response to requests received.</li>
-				<li>Yukihiro Matsumoto “Matz” has kindly agreed to speak at RubyConf India 2010 via a video call</li>
-			</ul>
-	      </div>
+      <div class="col">
+        <h4>Latest News</h4>
+        <ul class="news">
+          <li>Yukihiro Matsumoto “Matz” has kindly agreed to speak at RubyConf India 2010 via a video call</li>
+          <li>RubyConf India registrations will close on Mar 17th, 2010.</li>
+        </ul>
+      </div>
       <div class="col">
         <h4>Sponsorship Opportunities</h4>
-        <p>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></p>
+        <p>The call for sponsorship is now closed. A big thank you to all our sponsors for coming forward to support the event.</p>
       </div>
       <div class="proposals">
         <h4>Participation Information</h4>
@@ -86,12 +85,10 @@
         </div>
       </div>
     </div>
-    
   </div>
   <!-- Side bar -->
   <div class="sidebar">
-   <div class="support">
-	<a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a>	</div>
+    <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
     <div class="sb_content">
       <h4>Platinum &amp; Technology Sponsor</h4>
       <div class="sponsor_logos">
@@ -103,13 +100,14 @@
       <div class="sponsor_logos">
         <ul class="co-sponsor">
           <li><a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
-		  <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
+          <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
         </ul>
       </div>
       <h4>Silver Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="co-sponsor">
           <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
+          <li> <a href="http://www.aec.edu.in/" target="_blank"><img src="images/Aditya_logo.png" alt="Aditya Group Of colleges" /></a></li>
         </ul>
       </div>
       <h4>Media Partner</h4>
