--- a/speakers.html
+++ b/speakers.html
@@ -101,7 +101,7 @@
         </div>
       </li>
       <li>
-        <div class="spkr_photo"> <img src="images/speakers/saiV.jpg" alt="Sai Venkatakrishnan  " title="Sai Venkatakrishnan  " /> </div>
+        <div class="spkr_photo"> <img src="images/speakers/SaiV.jpg" alt="Sai Venkatakrishnan  " title="Sai Venkatakrishnan  " /> </div>
         <div class="spkr_details">
           <p class="spkr_name">Sai Venkatakrishnan </p>
           <p class="spkr_desc"> Sai Venkatakrishnan is working with Thoughtworks as a "Developer in Test" Journeyman. He spends his time dreaming about code, thinking in tests and contributing to opensource. He is the author and maintainer of ChromeWatir (A Watir implementation of Google Chrome browser), em-couchdb (A EventMachine based client for CouchDb), flash-watir, silverlight-selenium, schnell-jruby (Watir API using HtmlUnit and JRuby) and rrd-rb (Round Robin database bindings for Ruby). He is interested in topics ranging from evolutionary design, Agile coaching, large scale concurrency, functional languages, Event Driven frameworks, NoSql databases. </p>
