Galeel's latest patches

--- a/inside.html
+++ b/inside.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Rajveer Singh Rathore" />
 <meta name="description" content="India's first RubyConf is happening in Bangalore in March this year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
 <meta name="keywords" content="" />
-<link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="css/inner-page.css" type="text/css" media="screen" />
 <!--[if IE 6]>
