--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Rajveer Singh Rathore" />
 <meta name="description" content="India's first RubyConf is happening in Bangalore in March this year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
 <meta name="keywords" content="" />
-<link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
 <!--[if IE 6]>
 	<link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
@@ -31,9 +31,10 @@
     <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
     <div class="blurb">
       <h2>RubyConf India 2010</h2>
-      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation & Technology Trust</span>.</blockquote>
+      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation  &amp; Technology Trust</span>.</blockquote>
       <address>
-      Royal Orchid Hotel, Bangalore
+      <a href="location.html" title="#1, Golf Avenue, (Adjoining KGA Golf Course),
+Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
       </address>
       <div>20th &amp; 21st March</div>
     </div>
@@ -41,10 +42,11 @@
   </div>
   <div class="content">
     <h2>About</h2>
-    <p>The <strong>Ruby Community</strong> in India together with the <strong>Innovation &amp; Technology Trust</strong> is pleased to announce <strong>RubyConf India 2010</strong> on <strong>Mar 20<sup>th</sup></strong> and <strong>21<sup>st</sup></strong> at the Royal Orchid Hotel, Bangalore. Targeted at Ruby practitioners and anyone remotely interested or curious about Ruby, it will offer Ruby enthusiasts an opportunity brainstorm, network and learn about the latest technology changes first-hand.</p>
-    <p>Being the <strong>first ever</strong> RubyConf to be hosted in India, this 2-day event will feature prominent speakers like Yukihiro “<strong>Matz</strong>” Matsumoto (the creator of Ruby himself will deliver a talk via video-conference), <strong>Chad Fowler</strong> author of “The Passionate Programmer” and “My Job went to India”, <strong>Ola Bini</strong> core-committer to JRuby since 2006, <strong>Obie Fernandez</strong> author of “The Rails Way” and <strong>Nick Sieger</strong> of Engine Yard and JRuby fame.</p>
+    <p>The <strong>Ruby Community</strong> in India together with the <strong>Innovation &amp; Technology Trust</strong> is pleased to announce <strong>RubyConf India 2010</strong> on <strong>Mar 20<sup>th</sup></strong> and <strong>21<sup>st</sup></strong> at the <a href="location.html" title="#1, Golf Avenue, (Adjoining KGA Golf Course),
+Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore. Targeted at Ruby practitioners and anyone remotely interested or curious about Ruby, it will offer Ruby enthusiasts an opportunity brainstorm, network and learn about the latest technology changes first-hand.</p>
+    <p>Being the <strong>first ever</strong> RubyConf to be <a href="location.html">hosted in India</a>, this 2-day event will feature prominent speakers like Yukihiro “<strong>Matz</strong>” Matsumoto (the creator of Ruby himself will deliver a talk via video-conference), <strong>Chad Fowler</strong> author of “The Passionate Programmer” and “My Job went to India”, <strong>Ola Bini</strong> core-committer to JRuby since 2006, <strong>Obie Fernandez</strong> author of “The Rails Way” and <strong>Nick Sieger</strong> of Engine Yard and JRuby fame.</p>
     <p>Ruby is an OS dynamic language that offers an ideal development environment for <strong>Agile</strong> practitioners. It has one of the most active open source communities worldwide which produces and supports tools and projects like “Ruby on Rails” - a powerful web application development framework that works well on different platforms, and significantly <strong>reduces time-to-market</strong> and <strong>operating costs</strong>.</p>
-    <p>A strong supporter of emerging OS technologies that promise to revolutionize the IT landscape, <strong>ThoughtWorks</strong> is the Platinum and Technology Sponsor for this event and is supported by <strong>Ruby Central</strong> – an international non-profit dedicated to the advocacy of the Ruby programming language across the globe.  Ecosystem support includes Gold Sponsors Castle Rock Research <strong>Corporation &amp; Hashrocket</strong>, Silver Sponsor <strong>Mahaswami Software</strong> and Media Partner <strong>Silicon India</strong>. Register today at <a href="http://rubyconfindia.org/">www.rubyconfindia.org</a>!</p>
+    <p>A strong supporter of emerging OS technologies that promise to revolutionize the IT landscape, <strong>ThoughtWorks</strong> is the Platinum and Technology Sponsor for this event and is supported by <strong>Ruby Central</strong> – an international non-profit dedicated to the advocacy of the Ruby programming language across the globe.  Ecosystem support includes Gold Sponsors <strong>Castle Rock Research Corporation &amp; Hashrocket</strong>, Silver Sponsor <strong>Mahaswami Software &amp; Aditya Institutions</strong> and Media Partner <strong>Silicon India</strong>. Register today at <a href="http://rubyconfindia.org/">www.rubyconfindia.org</a>!</p>
   </div>
   <!-- Side bar -->
   <div class="sidebar">
