--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Rajveer Singh Rathore" />
 <meta name="description" content="India's first RubyConf is happening in Bangalore in March this year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
 <meta name="keywords" content="" />
-<link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
 <!--[if IE 6]>
 	<link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
@@ -31,9 +31,11 @@
     <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
     <div class="blurb">
       <h2>RubyConf India 2010</h2>
-      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation & Technology Trust</span>.</blockquote>
-      <address>
-      Royal Orchid Hotel, Bangalore
+      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the 
+<span>Innovation  &amp; Technology Trust</span>.</blockquote>
+     <address>
+      <a href="location.html" title="#1, Golf Avenue, (Adjoining KGA Golf Course),
+Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
       </address>
       <div>20th &amp; 21st March</div>
     </div>
