--- a/location.html
+++ b/location.html
@@ -1,32 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-<head >
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
+<head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>RubyConf India 2010: Get involved</title>
 <meta name="robots" content="index,follow" />
 <meta name="author" content="Rajveer Singh Rathore" />
 <meta name="description" content="India's first RubyConf is happening in Bangalore in March this year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
 <meta name="keywords" content="" />
-<script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
-<script language="javascript" src="tweet/jquery.tweet.js" type="text/javascript"></script>
-<script type='text/javascript'>
-        $(document).ready(function(){
-            $(".tweet").tweet({
-           		username: "rubyconfindia",
-                //join_text: "auto",
-                //avatar_size: 73,
-                count: 2,
-				query: "from:rubyconfindia",
-           		loading_text: "searching twitter..."
-
-            });
-        });
-		
-
-</script>
 <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
-<link href="tweet/jquery.tweet.css" media="all" rel="stylesheet" type="text/css"/>
 <!--[if IE 6]>
 	<link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
 <![endif]-->
@@ -49,42 +31,41 @@
     <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
     <div class="blurb">
       <h2>RubyConf India 2010</h2>
-      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation &amp; Technology Trust</span>.</blockquote>
-     <address>
-      <a href="location.html" title="#1, Golf Avenue, (Adjoining KGA Golf Course),
-Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
+      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation  &amp; Technology Trust</span>.</blockquote>
+      <address>
+      <a href="#"  title="#1, Golf Avenue, (Adjoining KGA Golf Course),
+Old Airport Road, Bangalore 560 008."> Royal Orchid Hotel</a>, Bangalore
       </address>
       <div>20th &amp; 21st March</div>
     </div>
     <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
   </div>
-  <div class="main_wrap">
-    <div class="main_content">
-      <div class="col">
-        <h4>Latest News</h4>
-        <ul class="news">
-          <li>Yukihiro Matsumoto “Matz” has kindly agreed to speak at RubyConf India 2010 via a video call</li>
-          <li>RubyConf India registrations will close on Mar 17th, 2010.</li>
-        </ul>
+  <div class="content">
+    <h2>Venue</h2>
+    <p><br />
+
+    <address>
+    <strong>Royal Orchid Hotel</strong>,<br />
+    1, Golf Avenue, (Adjoining KGA Golf Course),<br />
+    Old Airport Road, Bangalore 560 008
+    </address>
+    </p>
+    <br />
+    <p><strong>Tel: </strong> +91 80 4178 3000 <strong>Fax: </strong> +91 80 2520 3366 </p>
+    <br />
+    <p><a href="http://www.royalorchidhotels.com/" target="_blank">royalorchidhotels.com</a></p>
+    <br />
+    <br />
+    <p><strong>Map & Direction:</strong></p>
+    <div class="map">
+      <div style="border: 1px dashed rgb(142, 42, 139); padding: 5px;" id="subSection1">
+        <iframe width="525" height="400" frameborder="0" scrolling="no" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=101570521578905755438.000
+
+46e17ca33f3bb01508&amp;ll=12.957491,77.644243&amp;spn=0.007319,0.00912&amp;z=16&amp;output=embed" marginwidth="0" marginheight="0"> </iframe>
       </div>
-      <div class="col">
-        <h4>Sponsorship Opportunities</h4>
-        <p>The call for sponsorship is now closed. A big thank you to all our sponsors for coming forward to support the event.</p>
-      </div>
-      <div class="proposals">
-        <h4>Participation Information</h4>
-        <p class="blrb">The call for proposals for talks at RubyConf India 2010 is now closed. We have received thirty seven proposals which are currently being reviewed by a panel consisting of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
-        <p class="blrb2">Watch this space (or <a href="http://twitter.com/rubyconfindia">follow us</a> on twitter) for announcements regarding both accepted proposals and registration for the event. Accepted proposals will be announced by the end of January, and registrations will open sometime early in February.</p>
-      </div>
-    </div>
-    <div class="content">
-      <div class="sb_content">
-        <div class="latest_news">
-          <h4>Latest Tweets </h4>
-          <a target="_blank" title="Follow us via Twitter" class="btn_yellow" href="http://twitter.com/rubyconfindia">Follow Us</a>
-          <div class="tweet"></div>
-        </div>
-      </div>
+      <p><a style="text-align: left;" class="link-all" target="_blank" href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;msa=0&amp;msid=101570521578905755438.00
+
+046e17ca33f3bb01508&amp;ll=12.957491,77.644243&amp;spn=0.007319,0.00912&amp;z=16&amp;source=embed">View Larger Map</a> </p>
     </div>
   </div>
   <!-- Side bar -->
@@ -100,7 +81,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
       <h4>Gold Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="co-sponsor">
-          <li><a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
+          <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
           <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
         </ul>
       </div>
@@ -122,6 +103,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
   <!-- /side bar -->
 </div>
 <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
+</div>
 <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
