Last Patch Apparently

--- a/speakers.html
+++ b/speakers.html
@@ -352,6 +352,63 @@ Brendan G. Lim" title="Brendan G. Lim" /> </div>
           </div>
         </div>
       </li>
+       <li>
+        <div class="spkr_photo"> <img src="images/speakers/PradeepE.jpg" alt="
+Pradeep Elankumaran" title="Pradeep Elankumaran" /> </div>
+        <div class="spkr_details">
+          <p class="spkr_name">Pradeep Elankumaran</p>
+          <div class="spkr_desc">
+            <p> Pradeep is the Director of R&D at Intridea, an innovations company based out of Washington DC and the Bay Area that specializes in enterprise collaboration applications. He's also the lead architect of. Presently, an enterprise microblogging app and has been using Ruby
+well before Rails existed. Apart from Ruby, he's a member of the XMPP Standards Foundation and is very interested in scalable backend systems, machine learning and applying mathematical models to social data.
+ </p>
+          </div>
+          <div class="spkr_abstract">
+            <p><strong>Talk: The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship
+using Ruby </strong></p>
+            <p> Talk: The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship
+using Ruby 
+India's up and coming startup culture is one that's been long-overdue. While the country's large pool of talent and artistic minds is primed nd ready for starting up hundreds of innovative web companies, the reality is that not many exist, and the ones that do rarely compete on the global stage. While the problems facing new companies in India are well-known, there are alternatives to going the 'traditional' startup route.</p>
+            <p> 
+
+This open-ended talk will put forth some new techniques for Indian entrepreneurs to compete globally, by leveraging agile and rapid development efforts using Ruby that directly appeal to cash- and time-strapped founders. There will also be some discussion on growing your startup, finding good developers, helping build a community of like-minded individuals locally, and pointers to next steps. The last quarter of the talk will be an open-mic Q&A session that will help directly identify pain points for entrepreneurs in India and possible solutions to the same.
+ </p>
+          </div>
+        </div>
+      </li>
+       <li>
+        <div class="spkr_photo"> <img src="images/speakers/speaker_avatar.jpg" alt="
+Sreekanth V" title="Sreekanth V" /> </div>
+        <div class="spkr_details">
+          <p class="spkr_name">Sreekanth V</p>
+          <div class="spkr_desc">
+            <p>Sreekanth is a Developer at Thoughtworks, working on projects across the multiple continents and technologies. He is interested in Visualization and Mobile technologies. (@sreeix, github.com/sreeix) </p>
+          </div>
+          <div class="spkr_abstract">
+            <p><strong>Talk: Hacking and Learning from Open Source Ruby </strong></p>
+           
+          </div>
+        </div>
+      </li>
+       <li>
+        <div class="spkr_photo"> <img src="images/speakers/speaker_avatar.jpg" alt="
+Ivan Porto Carrero" title="Ivan Porto Carrero" /> </div>
+        <div class="spkr_details">
+          <p class="spkr_name">Ivan Porto Carrero</p>
+          <div class="spkr_desc">
+            <p> 
+
+Ivan Porto Carrero is a freelance consultant on .NET and (Iron)Ruby. His
+experience covers mostly web development. He is currently writing the IronRuby in Action book for Manning publications.  Ivan maintains the caricature open source project and contributes patches whenever he needs to, to other projects.
+
+
+ </p>
+          </div>
+          <div class="spkr_abstract">
+            <p><strong> Talk: IronRuby: The Ruby &amp; .NET Love Child </strong></p>
+           
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
   <!-- Side bar -->
