Reworking speakers list

--- a/program.html
+++ b/program.html
@@ -60,7 +60,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <tr >
           <td valign="middle"><p align="right">10:15</p></td>
           <td valign="middle"><p align="right">11:00</p></td>
-          <td colspan="2" valign="middle"><p>“Ruby on Rails Insurgency” - Keynote <span class="lighter">by Chad Fowler</span></p></td>
+          <td colspan="2" valign="middle"><p>Present and Future of Programming Languages – <span class="lighter">Keynote by Ola Bini</span></p></td>
         </tr>
         <tr  class="odd">
           <td valign="middle"><p align="right">11:15</p></td>
@@ -113,12 +113,13 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <tr  class="odd">
           <td valign="middle"><p align="right">10:00</p></td>
           <td valign="middle"><p align="right">10:45</p></td>
-          <td colspan="2" valign="middle"><p>Present and Future of Programming Languages – <span class="lighter">Keynote by Ola Bini</span></p></td>
+          <td colspan="2" valign="middle"><p>Exploring Rails 3 Through Choices – <span class="lighter">Nick Sieger</span></p></td>
         </tr>
         <tr >
           <td valign="middle"><p align="right">11:00</p></td>
           <td valign="middle"><p align="right">11:45</p></td>
-          <td colspan="2" valign="middle"><p>Exploring Rails 3 Through Choices – <span class="lighter">Nick Sieger</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1: </span>Message Queueing in Ruby - An Overview - <span class="lighter">Pradeep Elankumaran</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2: </span>TBD - <span class="lighter">Brian Guthrie</span></p></td>
         </tr>
         <tr  class="odd">
           <td valign="middle"><p align="right">12:00</p></td>
@@ -134,7 +135,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <tr  class="odd">
           <td valign="middle"><p align="right">2:00</p></td>
           <td valign="middle"><p align="right">2:45</p></td>
-          <td valign="middle"><p><span class="lighter">TRACK 1:</span> GlassFish supports multiple Ruby web frameworks ... really ? - <span class="lighter">Arun Gupta</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> GlassFish supports multiple Ruby web frameworks... really? - <span class="lighter">Arun Gupta</span></p></td>
           <td valign="middle"><p><span class="lighter">TRACK 2:</span> Let's build a Ruby Application Server - <span class="lighter">Vineet Tyagi</span></p></td>
         </tr>
         <tr  >
