Latest Changes to Schedule

--- a/program.html
+++ b/program.html
@@ -118,8 +118,8 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <tr >
           <td valign="middle"><p align="right">11:00</p></td>
           <td valign="middle"><p align="right">11:45</p></td>
-          <td valign="middle"><p><span class="lighter">TRACK 1: </span>Message Queueing in Ruby - An Overview - <span class="lighter">Pradeep Elankumaran</span></p></td>
-          <td valign="middle"><p><span class="lighter">TRACK 2: </span>TBD - <span class="lighter">Brian Guthrie</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1: </span>GlassFish supports multiple Ruby web frameworks ... really ? - <span class="lighter">Arun Gupta</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2: </span>The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship - <span class="lighter">Pradeep Elankumaran</span></p></td>
         </tr>
         <tr  class="odd">
           <td valign="middle"><p align="right">12:00</p></td>
@@ -129,19 +129,19 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <tr  >
           <td valign="middle"><p align="right">1:00</p></td>
           <td valign="middle"><p align="right">1:45</p></td>
-          <td valign="middle"><p><span class="lighter">TRACK 1:</span> The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship - <span class="lighter">Pradeep Elankumaran</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span>Managing entropy on long term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen months - <span class="lighter">Sidu Ponnappa &amp; Niranjan Paranjape</span></p></td>
           <td valign="middle"><p><span class="lighter">TRACK 2:</span> The Taming of the View - <span class="lighter">Sarah Taraporewalla</span></p></td>
         </tr>
         <tr  class="odd">
           <td valign="middle"><p align="right">2:00</p></td>
           <td valign="middle"><p align="right">2:45</p></td>
-          <td valign="middle"><p><span class="lighter">TRACK 1:</span> GlassFish supports multiple Ruby web frameworks... really? - <span class="lighter">Arun Gupta</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Message Queueing in Ruby - An Overview - <span class="lighter">Pradeep Elankumaran</span></p></td>
           <td valign="middle"><p><span class="lighter">TRACK 2:</span> Let's build a Ruby Application Server - <span class="lighter">Vineet Tyagi</span></p></td>
         </tr>
         <tr  >
           <td valign="middle"><p align="right">3:00</p></td>
           <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Managing entropy on long term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen months - <span class="lighter">Sidu Ponnappa &amp; Niranjan Paranjape</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Session by <span class="lighter">Brian Guthrie</span> (tentative)</p></td>
           <td valign="middle"><p><span class="lighter">TRACK 2:</span> MacRuby to the Max - <span class="lighter">Brendan G. Lim</span></p></td>
         </tr>
         <tr class="odd">
