--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
     <p><strong>Event Information: </strong> <br />
       <br />
       Sidu Ponnappa <br />
-      sidu@thoughtworks.com <br />
+      ckponnappa@gmail.com <br />
       +91-9880609867 <br />
       <br />
       <strong>Ticketing Assistance:</strong>- <br />
