Updated speaker profile

--- a/speakers.html
+++ b/speakers.html
@@ -222,7 +222,8 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <div class="spkr_details">
           <p class="spkr_name">Sidu Ponnappa</p>
           <div class="spkr_desc">
-            <p> Sidu Ponnappa writes code because he likes it, and has been doing so since he was six. He has spent last five years as a consultant at ThoughtWorks, working on a variety of platforms, most recently Ruby. He blogs at <a href="http://blog.sidu.in" target="_blank">http://blog.sidu.in</a> and tweets at <a href="http://twitter.com/ponnappa" target="_blank"> http://twitter.com/ponnappa</a>. </p>
+            <p> Sidu Ponnappa writes code because he likes it, and has been doing so since he was six. He cut his teeth in the startup business a few years ago when he co-founded <a href="http://inactiv.com">InActiv</a>, the core of which ran Rails. He has spent last five years as a consultant at ThoughtWorks working on a variety of platforms, most recently Ruby.</p>
+            <p>He blogs at <a href="http://blog.sidu.in" target="_blank">http://blog.sidu.in</a> and tweets at <a href="http://twitter.com/ponnappa" target="_blank"> http://twitter.com/ponnappa</a>. </p>
           </div>
           <div class="spkr_abstract">
             <p><strong> Talk: Managing entropy on long term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen months </strong></p>
@@ -237,7 +238,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <div class="spkr_details">
           <p class="spkr_name">Niranjan Paranjape</p>
           <div class="spkr_desc">
-            <p> Niranjan has recently started offshore Rails engineering shop. He has around two years experience developing and deploying Ruby on Rails applications. He has most recently worked on automating most of the infrastructure management processes at a very large custom web-hosting provider using a suite of over a dozen RESTfully integrated Rails apps. </p>
+            <p> Niranjan has recently founded a company specialising in offshore Rails engineering. He has over two years of experience developing and deploying Ruby on Rails applications at large enterprises. He has most recently worked on automating most of the infrastructure management processes at a very large custom web-hosting provider using a suite of over a dozen RESTfully integrated Rails apps.</p>
           </div>
           <div class="spkr_abstract">
             <p>Talk: Niranjan will be co-presenting the talk titled <em>“Managing entropy on long term Ruby and Rails codebases….</em>” with Sidu Ponnappa</p>
