Setting name on Brian's talk

--- a/program.html
+++ b/program.html
@@ -141,7 +141,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <tr  >
           <td valign="middle"><p align="right">3:00</p></td>
           <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Session by <span class="lighter">Brian Guthrie</span> (tentative)</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Advanced Ruby Idioms So Clean You Can Eat Off Of Them - <span class="lighter">Brian Guthrie</span></p></td>
           <td valign="middle"><p><span class="lighter">TRACK 2:</span> MacRuby to the Max - <span class="lighter">Brendan G. Lim</span></p></td>
         </tr>
         <tr class="odd">
