--- a/program.html
+++ b/program.html
@@ -29,17 +29,19 @@
   </div>
   <div class="header">
     <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
+    <div class="flash_news">
+      <p><a href="speakers.html#presentation_links">RubyConf2010 presentation...</a></p>
+    </div>
     <div class="blurb">
       <h2>RubyConf India 2010</h2>
-      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the 
-<span>Innovation  &amp; Technology Trust</span>.</blockquote>
+      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation  &amp; Technology Trust</span>.</blockquote>
       <address>
       <a href="location.html" title="#1, Golf Avenue, (Adjoining KGA Golf Course),
 Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
       </address>
       <div>20th &amp; 21st March</div>
     </div>
-    <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
+    <!--<div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>-->
   </div>
   <div class="content wide_content">
     <h2>Program</h2>
@@ -65,7 +67,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <tr  class="odd">
           <td valign="middle"><p align="right">11:15</p></td>
           <td valign="middle"><p align="right">12:00</p></td>
-          <td valign="middle" colspan="2"><p>Blood, Sweat & Rails 2010 -  Session  <span class="lighter">by Obie Fernandez </span></p></td>
+          <td valign="middle" colspan="2"><p>Blood, Sweat & Rails 2010 -  Session <span class="lighter">by Obie Fernandez </span></p></td>
         </tr>
         <tr  >
           <td valign="middle"><p align="right">12:00</p></td>
@@ -141,7 +143,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
         <tr  >
           <td valign="middle"><p align="right">3:00</p></td>
           <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Advanced Ruby Idioms So Clean You Can Eat Off Of Them - <span class="lighter">Brian Guthrie</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Session by <span class="lighter">Brian Guthrie</span> (tentative)</p></td>
           <td valign="middle"><p><span class="lighter">TRACK 2:</span> MacRuby to the Max - <span class="lighter">Brendan G. Lim</span></p></td>
         </tr>
         <tr class="odd">
