--- a/badges.html
+++ b/badges.html
@@ -29,17 +29,19 @@
   </div>
   <div class="header">
     <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
+    <div class="flash_news">
+      <p><a href="speakers.html#presentation_links">RubyConf2010 presentation...</a></p>
+    </div>
     <div class="blurb">
       <h2>RubyConf India 2010</h2>
-      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the 
-<span>Innovation  &amp; Technology Trust</span>.</blockquote>
+      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation  &amp; Technology Trust</span>.</blockquote>
       <address>
       <a href="location.html" title="#1, Golf Avenue, (Adjoining KGA Golf Course),
 Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
       </address>
       <div>20th &amp; 21st March</div>
     </div>
-    <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
+    <!--<div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>-->
   </div>
   <div class="content wide_content">
     <h2>Blog Badges for RubyConf India</h2>
