--- a/inside.html
+++ b/inside.html
@@ -15,31 +15,26 @@
 <![endif]-->
 </head>
 <body>
-	<div class="wrapper">
-
-		
-		
-		<div class="content">
-			<div class="latest_news">
-				<h3>Latest News via Twitter</h3>
-				<p>Follow us on Twitter at <a href="http://twitter.com/rubyconfindia">@rubyconfindia</a> for the latest updates.</p>
-				<a href="http://twitter.com/rubyconfindia" class="btn_yellow" title="Follow us via Twitter" target="_blank">Follow Us</a>
-
-			</div>
-			<div class="col_1">
-				<h4>Get Involved</h4>
-				<P>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group <a href="http://groups.google.com/group/bangalorerug">mailing list</a>. To help with the event, simply join the group and ask.</P>
-			</div>
-			<div class="col_2">
-				<h4>Sponsorship Opportunities</h4>
-				<P>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></P>
-			</div>
-		</div>
-		<div class="bg">
-			<div class="proposals">
-				<h4>Participation Information</h4>
-				<p class="blrb">The call for proposals for talks at RubyConf India 2010 is now closed. We have received thirty seven proposals which are currently being reviewed by a panel consisting of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
-				<!--div class="col_1">
+<div class="wrapper">
+  <div class="content">
+    <div class="latest_news">
+      <h3>Latest News via Twitter</h3>
+      <p>Follow us on Twitter at <a href="http://twitter.com/rubyconfindia">@rubyconfindia</a> for the latest updates.</p>
+      <a href="http://twitter.com/rubyconfindia" class="btn_yellow" title="Follow us via Twitter" target="_blank">Follow Us</a> </div>
+    <div class="col_1">
+      <h4>Get Involved</h4>
+      <P>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group <a href="http://groups.google.com/group/bangalorerug">mailing list</a>. To help with the event, simply join the group and ask.</P>
+    </div>
+    <div class="col_2">
+      <h4>Sponsorship Opportunities</h4>
+      <P>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></P>
+    </div>
+  </div>
+  <div class="bg">
+    <div class="proposals">
+      <h4>Participation Information</h4>
+      <p class="blrb">The call for proposals for talks at RubyConf India 2010 is now closed. We have received thirty seven proposals which are currently being reviewed by a panel consisting of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
+      <!--div class="col_1">
 					<h5>About you</h5>
 					<ul>
 						<li>Name and Bio</li>
@@ -54,21 +49,18 @@
 						<li>Detailed description (2 or 3 paragraphs)</li>
 						<li>Target audience (newbies, advanced, etc.)</li>
 					</ul>
-				</div-->	
-				<p class="blrb2">Watch this space (or <a href="http://twitter.com/rubyconfindia">follow us</a> on twitter) for announcements regarding both accepted proposals and registration for the event. Accepted proposals will be announced by the end of January, and registrations will open sometime early in February.</p>
-			</div>
-		</div>
-		<div class="content_end">&nbsp;</div>
-		
-		<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
-
-		
-	</div>
-	<script type="text/javascript">
+				</div-->
+      <p class="blrb2">Watch this space (or <a href="http://twitter.com/rubyconfindia">follow us</a> on twitter) for announcements regarding both accepted proposals and registration for the event. Accepted proposals will be announced by the end of January, and registrations will open sometime early in February.</p>
+    </div>
+  </div>
+  <div class="content_end">&nbsp;</div>
+  <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
+</div>
+<script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
-  <script type="text/javascript">
+<script type="text/javascript">
   try {
   var pageTracker = _gat._getTracker("UA-10855424-1");
   pageTracker._trackPageview();
