--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            		username: "rubyconfindia",
                 //join_text: "auto",
                 //avatar_size: 73,
-                count: 2,
+                count: 3,
 				query: "from:rubyconfindia",
            		loading_text: "searching twitter..."
 
@@ -48,7 +48,7 @@
   <div class="header">
     <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
     <div class="flash_news">
-      <p><a href="speakers.html#presentation_links">RubyConf2010 presentation...</a></p>
+      <p><a href="speakers.html#presentation_links">RubyConf2010 presentations</a></p>
     </div>
     <div class="blurb">
       <h2>RubyConf India 2010</h2>
@@ -66,8 +66,7 @@ Old Airport Road, Bangalore 560 008." >Royal Orchid Hotel</a>, Bangalore
       <div class="col">
         <h4>Latest News</h4>
         <ul class="news">
-          <li>Yukihiro Matsumoto “Matz” has kindly agreed to speak at RubyConf India 2010 via a video call</li>
-          <li>RubyConf India registrations will close on Mar 17th, 2010.</li>
+          <li>Please find the <a href="speakers.html#presentation_links">RubyConf India presentations here.</a></li>
         </ul>
       </div>
       <div class="col">
