--- a/program.html
+++ b/program.html
@@ -30,7 +30,7 @@
   <div class="header">
     <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
     <div class="flash_news">
-      <p><a href="speakers.html#presentation_links">RubyConf2010 presentation...</a></p>
+      <p><a href="speakers.html#presentation_links">RubyConf2010 presentations</a></p>
     </div>
     <div class="blurb">
       <h2>RubyConf India 2010</h2>
